--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,11 +20,11 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
-    - hdf5
+    - hdf5 1.8.18|1.8.18.*
     - mpich
 
   run:
-    - hdf5
+    - hdf5 1.8.18|1.8.18.*
     - mpich
 
 test:
