--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,11 +1,12 @@
 c_compiler:
 - toolchain_c
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 cxx_compiler:
 - toolchain_cxx
+docker_image:
+- condaforge/linux-anvil
 fortran_compiler:
 - toolchain_fort
-hdf5:
-- 1.10.2
-pin_run_as_build:
-  hdf5:
-    max_pin: x.x.x
