--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,9 +20,11 @@ requirements:
     - {{ compiler('cxx') }}
   host:
     - hdf5
+    - hdf5-static
     - mpich
   run:
     - hdf5
+    - hdf5-static
     - mpich
 
 test:
