package license file

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,6 +39,7 @@ test:
 about:
   home: https://github.com/hyperion-rt/hyperion
   license: BSD 2-Clause
+  license_file: LICENSE
   summary: Hyperion Radiation Transfer Code
 
 extra:
