--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   md5: cf067467290b51e02ea7dd56815340f0
 
 build:
-  number: 4
+  number: 5
   skip: True  # [win]
 
 requirements:
@@ -18,6 +18,7 @@ requirements:
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - make
   host:
     - hdf5
     - hdf5-static
