--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   md5: bcbacd463810b9787eb99a2d82cc7224
 
 build:
-  number: 4
+  number: 0
   skip: True  # [win]
 
 requirements:
@@ -19,12 +19,12 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
-    - hdf5
-    - hdf5-static
+    - hdf5 1.10.*
+    - hdf5-static 1.10.*
     - mpich
   run:
-    - hdf5
-    - hdf5-static
+    - hdf5 1.10.*
+    - hdf5-static 1.10.*
     - mpich
 
 test:
